[gd_scene load_steps=6 format=3 uid="uid://ds4ars2v271dk"]

[ext_resource type="Script" path="res://main.gd" id="1_jw5xd"]
[ext_resource type="PackedScene" uid="uid://30xhpjbchbiy" path="res://player.tscn" id="1_lvp6v"]
[ext_resource type="PackedScene" uid="uid://co3yrvat1yivg" path="res://mob.tscn" id="2_xm5fl"]
[ext_resource type="PackedScene" uid="uid://dyjsqtgq85rj0" path="res://hud.tscn" id="4_45s5x"]

[sub_resource type="Curve2D" id="Curve2D_0weah"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -2, 2, 0, 0, 0, 0, 479, 0, 0, 0, 0, 0, 482, 721, 0, 0, 0, 0, -3, 720, 0, 0, 0, 0, -2, 2)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_jw5xd")
mob_scene = ExtResource("2_xm5fl")

[node name="Player" parent="." instance=ExtResource("1_lvp6v")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_0weah")

[node name="MobspawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-2, 2)
rotation = -0.00415798

[node name="HUD" parent="." instance=ExtResource("4_45s5x")]

[connection signal="hit" from="Player" to="." method="gave_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
